# GraphLayoutSynth

./: .gitignore  AGENTS.md  CLAUDE.md  DEMO.md  README.md  demo_app.py  pyproject.toml
configs/: generic_building.yaml
configs/program_constraint_profiles/: default_healthcare.yaml
docs/: FLOWCHART.md  GRAMMAR_CONFIG_SKILLS.md  INSTRUCTION_GUIDED_VARIANTS.md  PATIENT_SUPPORT_ROOM_MIX_REQUIREMENTS.txt  PATIENT_SUPPORT_ROOM_MIX_REQUIREMENTS.yaml  PROGRAM_REQUIREMENTS.md
docs/PR/: instruction-guided-config-variant.md  instruction-variant-http.md  llm-grammar-variant-control-plane.md  (+7 more)
graph_layout_synth/: __init__.py  __main__.py  archive.py  cli.py  config.py  config_contract.py  config_validator.py  diversity.py  export.py  generation_constraint_profile.py  generator.py  grammar.py  grammar_variant_assistant.py  grammar_variant_control_plane.py  instruction_variant_control_plane.py  instruction_variant_workflow.py  llm_evaluator.py  program_preflight.py  program_requirements.py  ranking.py  review_summary.py  rule_schema.py  scoring.py  tracing.py  validators.py  visualize.py
server/: __init__.py  main.py
tests/: conftest.py  test_archive.py  test_cli.py  test_config.py  test_config_contract.py  test_config_validator.py  test_diversity.py  test_export.py  test_generator.py  test_grammar_variant_assistant.py  test_grammar_variant_control_plane.py  test_instruction_variant.py  test_instruction_variant_http.py  test_llm_evaluator.py  test_matching_node_neighbor_aggregation.py  test_next_room_api.py  test_program_requirements.py  test_program_requirements_endpoints.py  test_ranking.py  test_report_export.py  test_review_summary.py  test_room_type_catalog.py  test_rule_schema.py  test_semantic_anchor_matching.py  test_suggestion_debug_artifacts.py  test_suggestion_intended_edges.py  test_tracing.py  test_validators.py  test_visualize.py
(+14 files in other folders)
