[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-layout-synth"
version = "0.1.0"
description = "Minimal stochastic graph-grammar prototype for building layout graphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "networkx>=2.8.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
llm = [
  "anthropic>=0.40",
]
demo = [
  "pandas>=1.5",
  "streamlit>=1.36",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["graph_layout_synth*"]
