[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-layout-synth"
version = "0.1.0"
description = "Minimal stochastic graph-grammar prototype for building layout graphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<0.116",
  "matplotlib>=3.7",
  "networkx>=2.8.7",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "starlette>=0.40,<0.46",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]
llm = [
  "anthropic>=0.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["graph_layout_synth*", "server*"]
